--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=788b9ecd33291b06b7328b1026f38103
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=postgresql://uscldhf7q2vblaglbug5:h0udmgx9pzT6w122IXCr@bhzliysdduz96ivnhj9j-postgresql.services.clever-cloud.com:5432/bhzliysdduz96ivnhj9j
 ###< doctrine/doctrine-bundle ###
